--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
       </section>
 
       <footer class="text-center text-deep-pink/60 text-sm mt-8 pb-4">
-        <p>💕 AchuNails - Donde cada uña cuenta una historia ✨</p>
+        <p>💕 Achu Nails - Sistema de cálculo y gestión de servicios desarrollado para optimizar cada detalle ✨</p>
       </footer>
 
     </div>
